<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1">

    <TextView android:id="@+id/bookTitleAndEd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:hint="Book Title Here"
        android:text="Intro Java Programming (4th ed.)"
        android:layout_gravity="center"
        android:textSize="17dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/author_and_isbn_row"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:id="@+id/author_part">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bookBy"
                android:id="@+id/bookBy"
                android:layout_marginRight="2dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Daniel Lin"
                android:id="@+id/bookAuthor"
                android:hint="by Author"
                android:layout_gravity="left" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:id="@+id/isbn_part">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/isbn_text"
                android:id="@+id/bookISBNtext"
                android:textStyle="bold"
                android:layout_marginRight="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12345675"
                android:id="@+id/bookISBN"
                android:hint="ISBN: 123456-3454121"
                android:layout_gravity="left" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/condition_and_price_row"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/condition_part"
            android:layout_weight=".5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/condition_text"
                android:id="@+id/bookConditionText"
                android:layout_marginRight="2dp"
                android:textStyle="bold"
               />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Used"
                android:id="@+id/bookCondition"
                android:hint="Condition: Used"
               />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/price_part"
            android:layout_weight=".5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_text"
                android:id="@+id/bookPriceText"
                android:textStyle="bold"
                android:layout_marginRight="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$12.00"
                android:id="@+id/bookPrice" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/course_row">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/course_part"
            android:gravity="left">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_text"
                android:id="@+id/bookCourseText"
                android:textStyle="bold"
                android:layout_marginRight="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bookCourse"
                android:hint="Comp Sci 101" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/comments_row">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comments_text"
            android:id="@+id/bookCommentText"
            android:layout_gravity="right"
            android:textStyle="bold"
            android:layout_marginRight="2dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="yaaaaaaaas"
            android:id="@+id/bookComments" />

    </LinearLayout>

    <Button
        android:layout_width="63dp"
        android:layout_height="wrap_content"
        android:id="@+id/interestButton"
        android:longClickable="false"

        android:layout_gravity="right"
        android:adjustViewBounds="false"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="+"
        android:layout_marginTop="-10dp"
        android:textSize="30dp" />
    <!--android:background="@drawable/abc_btn_rating_star_off_mtrl_alpha" -->
</LinearLayout>